for niall to see model error

--- a/cabin_collective/app/assets/stylesheets/users.scss
+++ b/cabin_collective/app/assets/stylesheets/users.scss
@@ -1,3 +1,17 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+
+h1{color:red}
+
+div.field{
+	text-align: center;
+}
+
+// what am I styling in here - what files am i affecting?
+// all users views
+// COLLABORATE WITH CARGO COLLECTIVE - Artist Residency
+
+
