--- a/cabin_collective/app/views/layouts/application.html.erb
+++ b/cabin_collective/app/views/layouts/application.html.erb
@@ -17,7 +17,10 @@
 
  <% if current_user %>
  	<p> hello, <%= current_user.email %> </p>
- 	<%= link_to 'Logout', sessions_path, method: :delete, data: {confirm: 'Are you sure?'} %>
+ 	
+ 	
+
+ 	<%=link_to 'Logout', logout_path, method: :delete, data: {confirm: 'Are you sure?'} %>
  <% else %>
  <%= link_to 'Please login', login_path %>
  <%end%>
