--- a/cabin_collective/app/views/layouts/application.html.erb
+++ b/cabin_collective/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>CabinColective</title>
+  <title>CabinCollective</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -21,6 +21,7 @@
  	
 
  	<%=link_to 'Logout', logout_path, method: :delete, data: {confirm: 'Are you sure?'} %>
+
  <% else %>
  <%= link_to 'Please login', login_path %>
  <%end%>
