--- a/cabin_collective/app/views/users/show.html.erb
+++ b/cabin_collective/app/views/users/show.html.erb
@@ -1,2 +1,4 @@
 <h1>Users#show</h1>
 <p>Find me in app/views/users/show.html.erb</p>
+
+<p>In here you should be able to see just as you can on the users homepage - their posts, likes ie behaviour </p>
