--- a/cabin_collective/app/views/layouts/application.html.erb
+++ b/cabin_collective/app/views/layouts/application.html.erb
@@ -1,32 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head>
-  <title>CabinCollective</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<body>
-<% flash.each do |name,message| %>
- <div class="flash-message flash-message-<%= name%>">
- 	<%= message %>
- </div>
- <% end %>
+    <title><%= content_for?(:title) ? yield(:title) : "foundation-rails" %></title>
 
+    <%= stylesheet_link_tag    "application" %>
+    <%= javascript_include_tag "vendor/modernizr" %>
+    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
+    <%= csrf_meta_tags %>
+  </head>
 
- <% if current_user %>
- 	<p> hello, <%= current_user.email %> </p>
- 	
- 	
+  <body>
 
- 	<%=link_to 'Logout', logout_path, method: :delete, data: {confirm: 'Are you sure?'} %>
+    <%= yield %>
 
- <% else %>
- <%= link_to 'Please login', login_path %>
- <%end%>
-
-<%= yield %>
-
-</body>
+  </body>
 </html>
