--- a/cabin_collective/app/views/users/index.html.erb
+++ b/cabin_collective/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Here is the welcome page that will list all users</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1>Here is the page that will list all users - from here you should be able to delete users as an admin</h1>
+
 
 <h2> Users Index </h2>
 
@@ -14,6 +14,7 @@
 	</tr>
 	<br>
 	<br>
+	<td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
 <% end %>
 
 
