auto-login, personalised homepages, time to style

--- a/cabin_collective/app/views/layouts/_header.html.erb
+++ b/cabin_collective/app/views/layouts/_header.html.erb
@@ -1,3 +1,15 @@
-<div class="header"> 
-	<%= link_to "User Home", "/users/home" %>
+<div class="header">
+	<% if current_user %> 
+		<% if current_user %>
+
+		<%= current_user.email %>
+
+		<% else %>
+
+		<p>not logged in</p>
+
+		<% end %>
+		<%= link_to "Home", "users/#{current_user.id}/home" %> |
+		<%= link_to "Logout", logout_path, method: :delete %>
+	<% end %>
 </div>
