--- a/cabin_collective/app/views/layouts/_postform.html.erb
+++ b/cabin_collective/app/views/layouts/_postform.html.erb
@@ -1,6 +1,6 @@
 <h1> This is the post creation form </h1>
 
-#<%= form_for @post do |newpost| %>
+<%= form_for @post do |newpost| %>
 
 <!-- REMEMBER TO VALIDATE/ERROR CHECK -->
 
