--- a/cabin_collective/app/views/posts/show.html.erb
+++ b/cabin_collective/app/views/posts/show.html.erb
@@ -1,2 +1,15 @@
 <h1>Posts#show</h1>
 <p>Find me in app/views/posts/show.html.erb</p>
+
+
+	
+	<img src="<%= @post.image %>">
+	<br><br><br>
+	<%= @post.name %>
+	<br><br><br>
+	<%= @post.description %>
+	<br><br><br>
+
+	<a href="/posts">Back to the Collective</a>
+	
+	
