--- a/cabin_collective/app/views/users/home.html.erb
+++ b/cabin_collective/app/views/users/home.html.erb
@@ -17,7 +17,7 @@
 	<br>
 	<p>
 	<%= link_to "Edit Post", edit_post_path(post) %> </p>
-	<p><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></p>
+	<p><%= link_to 'Destroy', post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %></p>
 
 	<%end%>
 
