logo filepath fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
     <div style=" width: 100%; display: block;">
     <%= render "/layouts/header" %>
     </div>
-    <img src="/assets/logo.png" style="margin:0 auto; width: 10%; display: block;"> 
+    <img src="/assets/images/logo.png" style="margin:0 auto; width: 10%; display: block;"> 
     <h1 style="text-align: center"> Cabin Collective </h1>
     <main><%= yield %></main>
 
